# app_finance

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
app/: database.py  main.py  models.py
app/logic/: bolsillos.py  inversion.py  proyeccion.py  semaforo.py
data/: finanzas.db
frontend/: app.js  index.html  manifest.json  styles.css
